--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>CandyClothing</title>
 </head>
 <body>
-    
+    <h1>This is an h1 heading</h1>
+    <h2>This is an h2 heading</h2>
 </body>
 </html>
