added br p pre and comment tags

--- a/index.html
+++ b/index.html
@@ -8,5 +8,22 @@
 <body>
     <h1>This is an h1 heading</h1>
     <h2>This is an h2 heading</h2>
+    <h3>This is an h3 heading</h3>
+    <h4>This is an h4 heading</h4>
+    <br>
+    <h5>This is an h4 heading</h5>
+    <br>
+    
+    <hr>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit exercitationem neque dolorum, beatae nemo corporis mollitia! Blanditiis laudantium accusantium vel aut, voluptate beatae eius voluptatum a harum dicta itaque saepe.    </p>
+    <pre>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+        Reprehenderit exercitationem neque dolorum, beatae nemo 
+        corporis mollitia! Blanditiis laudantium accusantium vel 
+        aut, voluptate beatae eius voluptatum a harum dicta itaque saepe.
+    </pre>
+    
+    <!-- THIS IS HOW TO  COMMENT -->
+
 </body>
 </html>
