--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>CandyClothing</title>
 </head>
 <body>
-    <a href="lyrics.html">God is good</a>
+    <a href="lyrics.html">Song Title - God is good</a>
     <!-- 
     <h1>This is an h1 heading</h1>
     <h2>This is an h2 heading</h2>
