--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>CandyClothing</title>
 </head>
 <body>
-    <a href="lyrics.html">Song Title - God is good</a>
+    <p> Song Title - <a href="lyrics.html" target="_blank"> God is Good All the Time </a> </p>
     <!-- 
     <h1>This is an h1 heading</h1>
     <h2>This is an h2 heading</h2>
