added dog image to index with attributes

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     -->
     
     <!-- THIS IS HOW TO  COMMENT -->
+    <img src="dog.jpg" alt="This is the picture of a dog" height="300">
+    
 
 </body>
 </html>
