put a hyperlink around the dog image

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     -->
     
     <!-- THIS IS HOW TO  COMMENT -->
-    <img src="dog.jpg" alt="This is the picture of a dog" height="300">
-    
+    <a href="https://www.goodhousekeeping.com/life/pets/g4531/cutest-dog-breeds/"><img src="dog.jpg" alt="This is the picture of a dog" height="300"></a>
+
 
 </body>
 </html>
