--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     -->
     
     <!-- THIS IS HOW TO  COMMENT -->
-    <a href="https://www.goodhousekeeping.com/life/pets/g4531/cutest-dog-breeds/"><img src="dog.jpg" alt="This is the picture of a dog" height="300"></a>
+    <a href="https://www.goodhousekeeping.com/life/pets/g4531/cutest-dog-breeds/"><img src="images/dog.jpg" alt="This is the picture of a dog" height="300"></a>
+    
 
 
 </body>
