added video link and abum cover

--- a/lyrics.html
+++ b/lyrics.html
@@ -8,6 +8,10 @@
 <body>
     <h1>God Is Good All the Time</h1>
     <h4>Song by Don Moen</h4>
+    
+    <a href="https://www.youtube.com/watch?v=Jl06RN5zRxk">Click here to see the video</a>
+    <br>
+    <img src="images/God is good all the time.jpeg" alt="Album Cover">
         
     <hr>
     <br>
