--- a/index.html
+++ b/index.html
@@ -38,6 +38,19 @@
         <source src="audio/On the Delta - John Patitucci.mp3" type="audio/mpeg">
         
     </audio>
+    <p>This is normal text</p>
+    <p>This is <b>bold</b> text</p>
+    <p>This is <i>italic</i> text</p>
+    <p>This is <strong>strong</strong> text</p>
+    <p>This is <del>deleted</del> text</p>
+    <p>This is <ul>underlined</ul> text</p>
+    <p>This is <s>small</s> text</p>
+    <p>This is <b>big</b> text</p>
+    <p>This is <sub>subscript</sub> text</p>
+    <p>This is <sup>superscript</sup> text</p>
+    <p>This is <tt>monospaced</tt> text</p>
+    <p>This is <mark style="background-color: aqua;">normal</mark> text</p>
+
 
 
 </body>
