added favicon and video

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CandyClothing</title>
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 </head>
 <body>
     <p> Song Title - <a href="lyrics.html" target="_blank"> God is Good All the Time </a> </p>
@@ -44,12 +45,15 @@
     <p>This is <strong>strong</strong> text</p>
     <p>This is <del>deleted</del> text</p>
     <p>This is <ul>underlined</ul> text</p>
+    <p>This is <u>underlined</u> text</p>
     <p>This is <s>small</s> text</p>
     <p>This is <b>big</b> text</p>
     <p>This is <sub>subscript</sub> text</p>
     <p>This is <sup>superscript</sup> text</p>
     <p>This is <tt>monospaced</tt> text</p>
     <p>This is <mark style="background-color: aqua;">normal</mark> text</p>
+    <br>
+    <video controls  src="video/earth.mp4"></video>
 
 
 
