added span and div headings

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
     <br>
     <video controls  src="video/earth.mp4"></video>
 
+    <h1><span style="background-color: tomato;">this is a span title</span></h1>
+    <h1><divstyle="background-color: tomato;">this is a div title</divstyle=></h1>
+
 
 
 </body>
