updated div color to cyan

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <video controls  src="video/earth.mp4"></video>
 
     <h1><span style="background-color: tomato;">this is a span title</span></h1>
-    <h1><divstyle="background-color: tomato;">this is a div title</divstyle=></h1>
+    <h1><div style="background-color: cyan;">this is a div title</div></h1>
 
 
 
