--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
     <h1><span style="background-color: tomato;">this is a span title</span></h1>
     <h1><div style="background-color: cyan;">this is a div title</div></h1>
 
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <span style="background-color: tomato;">Id ullam sit iusto vel quibusdam officiis ipsum nesciunt, quam repellat fugit deleniti quis est omnis maxime.</span> Sit consequuntur assumenda ea minus?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <div style="background-color: cyan;" >Id ullam sit iusto vel quibusdam officiis ipsum nesciunt, quam repellat fugit deleniti quis est omnis maxime.</div> Sit consequuntur assumenda ea minus?</p>
 
 
 </body>
