--- a/index.html
+++ b/index.html
@@ -61,6 +61,29 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <span style="background-color: tomato;">Id ullam sit iusto vel quibusdam officiis ipsum nesciunt, quam repellat fugit deleniti quis est omnis maxime.</span> Sit consequuntur assumenda ea minus?</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <div style="background-color: cyan;" >Id ullam sit iusto vel quibusdam officiis ipsum nesciunt, quam repellat fugit deleniti quis est omnis maxime.</div> Sit consequuntur assumenda ea minus?</p>
 
+    <h4>Grocery list</h4>
+    <ul>
+        <li>milk</li>
+        <li>eggs</li>
+        <li>sugar</li>
+    </ul>
+
+    <h4>To do list</h4>
+    <ol>
+        <li>brush teeth</li>
+        <li>shower</li>
+        <li>dress up</li>
+    </ol>
+
+    <h4>Football positions</h4>
+    <dl>
+        <dt>midfielder</dt>
+        <dd>standing or holding player</dd>
+
+        <dt>keeper</dt>
+        <dd>stands in goal</dd>
+
+    </dl>
 
 </body>
 </html>
